# c4lib

./: API.md  BUILDING.md  CMakeLists.txt  QUICKSTART.md  README.md  c4lib-version.hpp.in
doc/: C4 Schema Grammar.txt  Development Plan.txt  Layout of Compressed Data.txt  Performance Test Results.txt  Use of MD5 in Binary Savegames.txt  XML Loading Algorithm.txt
include/: c4lib.hpp  exceptions.hpp  logger.hpp  node-attributes.hpp  node-type.hpp
lib/c4lib/: c4lib-internal.hpp  c4lib.cpp
lib/expression-parser/: infix-representation.cpp  infix-representation.hpp  parser.cpp  parser.hpp
lib/importer/: file-manager.cpp  file-manager.hpp  importer.cpp  importer.hpp
lib/io/: io.cpp  io.hpp
lib/layout/: layout.cpp  layout.hpp
lib/logger/: log-formats.hpp  logger.cpp
lib/md5/: checksum.cpp  checksum.hpp  md5-digest.cpp  md5-digest.hpp  md5.cpp  md5.hpp
lib/native/: compiler-support.hpp  path.hpp
lib/options/: exception-formats.hpp  exceptions.hpp  options-manager.cpp  options-manager.hpp
lib/ptree/: base-node-reader.cpp  base-node-reader.hpp  binary-node-reader.cpp  binary-node-reader.hpp  binary-node-writer.cpp  binary-node-writer.hpp  debug.hpp  generative-node-source.cpp  generative-node-source.hpp  internationalization-text.hpp  node-reader.hpp  node-type.cpp  node-writer.hpp  null-node-reader.cpp  null-node-reader.hpp  recursive-node-source.hpp  translation-node-writer.cpp  translation-node-writer.hpp  util.cpp  util.hpp
lib/schema-parser/: auto-index.hpp  def-mem-type.cpp  def-mem-type.hpp  def-mem.hpp  def-tbl.cpp  def-tbl.hpp  def-type.cpp  def-type.hpp  definition.cpp  definition.hpp  parser-phase-one.cpp  parser-phase-one.hpp  parser-phase-two.cpp  parser-phase-two.hpp  parser.cpp  parser.hpp  token-type.cpp  token-type.hpp  token.hpp  tokenizer-constants.hpp  tokenizer.cpp  tokenizer.hpp
lib/util/: auto-pop.hpp  constants.hpp  enum-range.hpp  exception-formats.hpp  file-location.hpp  limits.hpp  narrow.hpp  options-data.hpp  options.hpp  schema.cpp  schema.hpp  text.cpp  text.hpp  timer.hpp  tune.hpp  util.hpp
lib/variable-manager/: variable-manager.cpp  variable-manager.hpp
lib/zlib/: constants.hpp  zlib-engine.cpp  zlib-engine.hpp  zstream.cpp  zstream.hpp
src/: config.xml  limits.hpp  main.cpp  options-data.hpp  options.hpp  text.hpp  util.hpp
test/: CMakeLists.txt
test/data/config/: options-manager-test-config.xml
test/data/misc/: schema-ambiguous-tokens.txt  schema-keywords.txt  schema-operators.txt  schema-punctuation.txt  schema-types.txt
test/data/saves/: Brennus BC-4000-2.CivBeyondSwordSave  Brennus BC-4000.CivBeyondSwordSave  LMA.CivBeyondSwordSave  Mao Zedong_1936-AD_Feb-26-2023_07-31-57.CivBeyondSwordSave  NC269-Gilgamesh AD-1735.CivBeyondSwordSave  Parrots.CivBeyondSwordSave  Play_By_Email.CivBeyondSwordSave  Tiny-Map-BC-4000.CivBeyondSwordSave
test/integration/: round-trip-test.cpp
test/unit/: definition-table-test.cpp  expression-parser-test.cpp  importer-test.cpp  logger-test.cpp  md5-test.cpp  options-manager-test-data.hpp  options-manager-test.cpp  path-test.cpp  recursive-node-source-test.cpp  schema-parser-p1-test.cpp  tokenizer-test.cpp  types-in-test-data.hpp  types-test.cpp  write-translation-test.cpp  zlib-engine-test.cpp
test/util/: constants.hpp  macros.hpp  util.cpp  util.hpp
